--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
             </h2>
           </div>
       </div>
-      <canvas id="myChart" width="400" height="200"></canvas>
+        <div class="container">
+          <h3 class="text-center">Tarea 1</h2>
+          <canvas id="myChart" width="400" height="200"></canvas>
+        </div>
+        <div class="container">
+          <h3 class="text-center">Tarea 2</h2>
+            <canvas id="myChartOne" width="400" height="200"></canvas>
+        </div>
+      
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
